# pytona

./: README.md  pyproject.toml  tests.py
src/pytona/: __init__.py
