[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pytona"
version = "0.0.1"
authors = [
    { name="Mike Vickers", email="mike@datadrivendetroit.org" },
]
description = "A simple wrapper for the python profiler."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "snakeviz > 2"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
[project.urls]
# "Homepage" = "https://github.com/mikevatd3/d3geocoder"
# "Bug Tracker" = "https://github.com/mikevatd3/d3geocoder/issues"
